--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,33 @@
 body {
     font-family: iranyekan, var(--bs-body-font-family);
 
+    header {
+        .navbar-brand {
+            span {
+                background: linear-gradient(89.92deg, #1C336C 0.23%, #008EC7 100.1%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                background-clip: text;
+                text-shadow: 0px 8px 24px $white;
+            }
+        }
+
+        .navbar-nav {
+            .dropdown {
+                display: flex;
+                background-color: $color-1;
+                border-radius: 8px;
+
+                >a {
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: $white;
+                }
+            }
+        }
+    }
+
     footer {
         .copyright {
             background: rgba(0, 0, 0, 0.7);
