--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,10 @@
 @import 'variable';
 @import 'font';
+@import 'utility';
 
 body {
     font-family: iranyekan, var(--bs-body-font-family);
+    background-color: $white-2;
 
     header {
         .navbar-brand {
@@ -11,7 +13,7 @@ body {
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                text-shadow: 0px 8px 24px $white;
+                text-shadow: 0px 0.5rem 1.5rem $white;
             }
         }
 
@@ -19,7 +21,7 @@ body {
             .dropdown {
                 display: flex;
                 background-color: $color-1;
-                border-radius: 8px;
+                border-radius: 0.5rem;
 
                 >a {
                     display: inline-flex;
@@ -28,6 +30,60 @@ body {
                     color: $white;
                 }
             }
+        }
+    }
+
+    main {
+        .header {
+            text-align: center;
+            text-transform: capitalize;
+            color: $color-1;
+            margin-top: 7.5rem;
+        }
+
+        .seprator {
+            display: flex;
+            align-items: center;
+            width: 9.375rem;
+
+            &::before,
+            &::after {
+                content: "";
+                flex: 1 1 0%;
+                height: 1px;
+                background: linear-gradient(90deg, #0188C0 0%, rgba(1, 136, 192, 0) 100%);
+            }
+
+            &::before {
+                transform: matrix(-1, 0, 0, 1, 0, 0);
+            }
+        }
+
+        .sub-header {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            color: $black-2;
+
+            p {
+                text-transform: capitalize;
+                font-size: 1.125rem;
+                line-height: 1.875rem;
+            }
+        }
+
+        .treatments-card {
+            figcaption {
+                text-transform: capitalize;
+                background: linear-gradient(85.6deg, rgba(24, 51, 101, 0.8) 0%, rgba(13, 122, 172, 0.8) 100%);
+                backdrop-filter: blur(0.5rem);
+                border-radius: 0px 0px 0.5rem 0.5rem;
+            }
+        }
+
+        .linkedin {
+            margin-top: 7.5rem;
         }
     }
 
@@ -44,5 +100,7 @@ body {
 
     .bi {
         display: inline-flex;
+        justify-content: center;
+        align-items: center;
     }
 }
