--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,7 +78,7 @@ body {
                 text-transform: capitalize;
                 background: linear-gradient(85.6deg, rgba(24, 51, 101, 0.8) 0%, rgba(13, 122, 172, 0.8) 100%);
                 backdrop-filter: blur(0.5rem);
-                border-radius: 0px 0px 0.5rem 0.5rem;
+                border-radius: 0 0 0.5rem 0.5rem;
             }
         }
 
@@ -86,13 +86,85 @@ body {
             margin-top: 7.5rem;
         }
 
-        .card {
-            transition: .3s all ease-in-out;
+        .card,
+        .card-hover {
+            transition: 0.3s all ease-in-out;
+
+            h5 {
+                color: $color-1;
+            }
 
             &:hover {
                 box-shadow: $card-shadow;
             }
         }
+
+        .subscription {
+            margin: 7.5rem auto;
+
+            .email-subscription {
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin: auto;
+                background: $white-2;
+                box-shadow: $card-shadow;
+                border-radius: 0.5rem;
+                padding: 3.75rem 1rem;
+
+                @media screen and (min-width:992px) {
+                    width: 80%;
+                }
+
+                &::before,
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    border-radius: 8px;
+                    z-index: -1;
+                }
+
+                &::before {
+                    background: linear-gradient(93.33deg, rgba(37, 34, 98, 0.75) 0%, rgba(16, 101, 162, 0.75) 100%);
+                    transform: rotate(-3deg);
+
+                }
+
+                &::after {
+                    background: linear-gradient(93.33deg, rgba(37, 34, 98, 0.25) 0%, rgba(16, 101, 162, 0.25) 100%);
+                    transform: rotate(-6deg);
+                }
+
+                h5 {
+                    color: $color-1;
+                }
+
+                div {
+                    min-width: 45%;
+
+                    input,
+                    button {
+                        padding: 0.75rem 1.5rem;
+                    }
+
+                    input {
+                        box-shadow: $card-shadow;
+                    }
+
+                    button {
+                        background-color: $color-1;
+                    }
+                }
+            }
+        }
+
+
     }
 
     footer {
