--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,8 @@
 body {
     font-family: iranyekan, var(--bs-body-font-family);
     background-color: $white-2;
+    width: 100%;
+    overflow-x: hidden;
 
     header {
         .navbar-brand {
@@ -73,12 +75,30 @@ body {
             }
         }
 
-        .treatments-card {
-            figcaption {
-                text-transform: capitalize;
-                background: linear-gradient(85.6deg, rgba(24, 51, 101, 0.8) 0%, rgba(13, 122, 172, 0.8) 100%);
-                backdrop-filter: blur(0.5rem);
-                border-radius: 0 0 0.5rem 0.5rem;
+        .background-image-blur {
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: linear-gradient(93.33deg, rgba(37, 34, 98, 0.4) 0%, rgba(16, 101, 162, 0.4) 100%);
+            filter: blur(100px);
+        }
+
+        .treatments-intro {
+            position: relative;
+
+            .treatments-background {
+                right: 0;
+                top: 50%;
+                transform: translate(0, -50%) rotate(45deg);
+            }
+
+            .treatments-card {
+                figcaption {
+                    text-transform: capitalize;
+                    background: linear-gradient(85.6deg, rgba(24, 51, 101, 0.8) 0%, rgba(13, 122, 172, 0.8) 100%);
+                    backdrop-filter: blur(0.5rem);
+                    border-radius: 0 0 0.5rem 0.5rem;
+                }
             }
         }
 
