update testimental with glide slider

--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -6,6 +6,10 @@
     object-fit: cover !important;
 }
 
+.text-justify {
+    text-align: justify !important;
+}
+
 .ratio-custom {
     --bs-aspect-ratio: 135%;
 }
