--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,56 @@ body {
     }
 
     main {
+
+        .intro {
+            background: linear-gradient(88.2deg, rgba(24, 53, 108, 0.9) 0%, rgba(3, 128, 184, 0.9) 100%),
+                url('../images/intro.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            box-shadow: 0px 16px 32px rgba(0, 38, 56, 0.25);
+            border-radius: 0.5rem;
+            min-height: 15rem;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 7.5rem;
+
+            @media screen and (min-width:992px) and (max-width:1200px) {
+                justify-content: center;
+            }
+
+            @media screen and (max-width:768px) {
+                justify-content: center;
+                padding: 0 2rem;
+            }
+
+            .box {
+                width: 12.5rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                padding: 3rem 2rem;
+                margin-top: -1.5rem;
+                border-radius: 0.5rem;
+                align-self: flex-start;
+
+                &:first-child {
+                    background: $color-1;
+                    box-shadow: 0px 4px 50px rgba(1, 136, 192, 0.5);
+                }
+
+                p {
+                    color: $white-2;
+                }
+
+                h5 {
+                    color: $white;
+                }
+            }
+        }
+
         .header {
             text-align: center;
             text-transform: capitalize;
@@ -259,6 +309,15 @@ body {
         justify-content: center;
         align-items: center;
     }
+}
+
+.glide__slide {
+    transition: .3s all ease-in-out;
+    opacity: 0.5;
+}
+
+.glide__slide--active {
+    opacity: 1;
 }
 
 .glide__arrows {
