--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -6,6 +6,10 @@
     object-fit: cover !important;
 }
 
+.object-fit-contain {
+    object-fit: contain;
+}
+
 .text-justify {
     text-align: justify !important;
 }
