--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,13 +13,15 @@ body {
     overflow-x: hidden;
 
     header {
+        z-index: 1;
+
         .navbar-brand {
             span {
                 background: linear-gradient(89.92deg, #1C336C 0.23%, #008EC7 100.1%);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                text-shadow: 0px 0.5rem 1.5rem $white;
+                text-shadow: 0 0.5rem 1.5rem $white;
             }
         }
 
@@ -37,13 +39,23 @@ body {
     }
 
     main {
-
         .intro {
+            margin-top: -3.5rem;
+            background-image: url('../images/header.png');
+            width: 100%;
+            height: 120vh;
+            background-size: cover;
+            background-repeat: no-repeat;
+            //clip-path: ellipse(100% 100% at 50% 0%);
+        }
+
+        .intro-inner {
+            position: relative;
             background: linear-gradient(88.2deg, rgba(24, 53, 108, 0.9) 0%, rgba(3, 128, 184, 0.9) 100%),
                 url('../images/intro.png');
             background-repeat: no-repeat;
             background-position: center;
-            box-shadow: 0px 16px 32px rgba(0, 38, 56, 0.25);
+            box-shadow: 0 1rem 2rem rgba(0, 38, 56, 0.25);
             border-radius: 0.5rem;
             min-height: 15rem;
             display: flex;
@@ -51,6 +63,7 @@ body {
             align-items: center;
             justify-content: space-between;
             padding: 0 7.5rem;
+            margin-top: -20vh;
 
             @media screen and (min-width:992px) and (max-width:1200px) {
                 justify-content: center;
@@ -71,10 +84,11 @@ body {
                 margin-top: -1.5rem;
                 border-radius: 0.5rem;
                 align-self: flex-start;
+                transition: .3s all ease-in-out;
 
-                &:first-child {
+                &:hover {
                     background: $color-1;
-                    box-shadow: 0px 4px 50px rgba(1, 136, 192, 0.5);
+                    box-shadow: 0 0.25rem 3.125rem rgba(1, 136, 192, 0.5);
                 }
 
                 p {
@@ -92,6 +106,14 @@ body {
             text-transform: capitalize;
             color: $color-1;
             margin-top: 7.5rem;
+
+            @media screen and (max-width:992px) {
+                margin-top: 5rem;
+            }
+
+            @media screen and (max-width:576px) {
+                margin-top: 3rem;
+            }
         }
 
         .seprator {
@@ -133,10 +155,10 @@ body {
 
             @media screen and (min-width:992px) {
                 position: absolute;
-                width: 500px;
-                height: 500px;
+                width: 31.25rem;
+                height: 31.25rem;
                 background: linear-gradient(93.33deg, rgba(37, 34, 98, 0.4) 0%, rgba(16, 101, 162, 0.4) 100%);
-                filter: blur(100px);
+                filter: blur(6.25rem);
                 z-index: -1;
             }
         }
@@ -158,6 +180,14 @@ body {
 
         .linkedin {
             margin-top: 7.5rem;
+
+            @media screen and (max-width:992px) {
+                margin-top: 5rem;
+            }
+
+            @media screen and (max-width:576px) {
+                margin-top: 3rem;
+            }
         }
 
         .tourist-background {
@@ -169,6 +199,10 @@ body {
         .testimental {
             background-color: rgba(25, 52, 107, 0.1);
             padding: 4rem 0;
+
+            @media screen and (max-width:576px) {
+                padding: 2rem 0;
+            }
 
             .testimental-card {
                 margin-top: 3.5rem;
@@ -225,6 +259,14 @@ body {
         .subscription {
             margin: 12rem auto;
 
+            @media screen and (max-width:992px) {
+                margin: 9rem auto;
+            }
+
+            @media screen and (max-width:576px) {
+                margin: 6rem auto;
+            }
+
             .email-subscription {
                 position: relative;
                 display: flex;
@@ -249,7 +291,7 @@ body {
                     left: 0;
                     right: 0;
                     bottom: 0;
-                    border-radius: 8px;
+                    border-radius: .5rem;
                     z-index: -1;
                 }
 
@@ -293,7 +335,7 @@ body {
     footer {
         .copyright {
             background: rgba(0, 0, 0, 0.7);
-            backdrop-filter: blur(20px);
+            backdrop-filter: blur(1.25rem);
 
             small {
                 color: #dddddd;
@@ -308,13 +350,22 @@ body {
     }
 }
 
-.glide__slide {
-    transition: .3s all ease-in-out;
-    opacity: 0.5;
+
+@media screen and (max-width:576px) {
+    .glide {
+        padding: 0 .75rem;
+    }
 }
 
-.glide__slide--active {
-    opacity: 1;
+@media screen and (min-width:992px) {
+    .glide__slide {
+        transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+        opacity: 0.5;
+    }
+
+    .glide__slide--active {
+        opacity: 1;
+    }
 }
 
 .glide__arrows {
@@ -323,7 +374,7 @@ body {
 }
 
 .glide__arrow {
-    padding: 8px;
+    padding: 0.5rem;
     position: initial;
     transform: none;
     border: none;
