--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,14 @@ body {
     header {
         z-index: 1;
 
+        nav {
+            background-color: transparent;
+
+            @media screen and (max-width:992px) {
+                background-color: $white-2;
+            }
+        }
+
         .navbar-brand {
             span {
                 background: linear-gradient(89.92deg, #1C336C 0.23%, #008EC7 100.1%);
@@ -42,11 +50,55 @@ body {
         .intro {
             margin-top: -3.5rem;
             background-image: url('../images/header.png');
+            //transform: rotate(-180deg);
             width: 100%;
             height: 120vh;
             background-size: cover;
             background-repeat: no-repeat;
             //clip-path: ellipse(100% 100% at 50% 0%);
+
+            .airplane {
+                position: absolute;
+                right: 0;
+                top: 13.125rem;
+                width: 40%;
+                max-width: 43.75rem;
+
+                @media screen and (max-width:992px) {
+                    top: 25%;
+                    width: 50%;
+                }
+
+                @media screen and (max-width:768px) {
+                    top: unset;
+                    width: 55%;
+                    bottom: -10vh;
+                }
+
+                @media screen and (max-width:576px) {
+                    display: none;
+                }
+            }
+
+            .container {
+                height: 80%;
+                display: flex;
+                align-items: center;
+
+                @media screen and (max-width:992px) {
+                    margin-top: 3.5rem;
+                }
+
+                h1 {
+                    letter-spacing: 0.2em;
+                    background: linear-gradient(89.92deg, #1C336C 0.23%, #008EC7 100.1%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    background-clip: text;
+                    text-shadow: 0px 8px 24px #FFFFFF;
+                    font-weight: 900;
+                }
+            }
         }
 
         .intro-inner {
@@ -81,14 +133,21 @@ body {
                 align-items: center;
                 justify-content: center;
                 padding: 3rem 2rem;
-                margin-top: -1.5rem;
                 border-radius: 0.5rem;
                 align-self: flex-start;
                 transition: .3s all ease-in-out;
 
+                @media screen and (max-width:992px) {
+                    margin-top: -1.5rem;
+                }
+
                 &:hover {
                     background: $color-1;
                     box-shadow: 0 0.25rem 3.125rem rgba(1, 136, 192, 0.5);
+
+                    @media screen and (min-width:992px) {
+                        margin-top: -1.5rem;
+                    }
                 }
 
                 p {
@@ -321,10 +380,6 @@ body {
                     input {
                         box-shadow: $card-shadow;
                     }
-
-                    button {
-                        background-color: $color-1;
-                    }
                 }
             }
         }
@@ -381,4 +436,13 @@ body {
     display: inline-flex;
     background-color: $color-1;
     border-radius: .5rem;
+}
+
+.btn-primary {
+    background-color: $color-1;
+    border-color: $color-1;
+
+    &:hover {
+        background-color: lighten($color-1, 5%);
+    }
 }
