--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -5,5 +5,6 @@ $white-2: #F1F1F1;
 $black-2: #262626;
 
 $color-1:#19346B;
+$color-2:#74F7FF;
 
 $card-shadow: 0px 4px 24px rgba(25, 52, 107, 0.25);
