--- a/sass/style.scss
+++ b/sass/style.scss
@@ -99,6 +99,10 @@ body {
                     //text-shadow: 0px 8px 24px #FFFFFF;
                     font-weight: 900;
                 }
+
+                p {
+                    max-width: 29.375rem;
+                }
             }
         }
 
