--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,12 +51,11 @@ body {
         .intro {
             margin-top: -3.5rem;
             background-image: url('../images/header.png');
-            //transform: rotate(-180deg);
             width: 100%;
             height: 120vh;
             background-size: cover;
             background-repeat: no-repeat;
-            //clip-path: ellipse(100% 100% at 50% 0%);
+            clip-path: ellipse(100% 100% at 50% 0%);
 
             .airplane {
                 position: absolute;
