--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,6 +87,7 @@ body {
 
                 @media screen and (max-width:992px) {
                     margin-top: 3.5rem;
+                    justify-content: center;
                 }
 
                 h1 {
@@ -511,13 +512,14 @@ body {
         }
 
         button {
-            background-color: $white-2;
+            background-color: transparent;
+            background-image: url('../images/footer-button.svg');
             position: absolute;
             top: 0;
             left: 50%;
             transform: translate(-50%, 0);
-            width: 4.5rem;
-            height: 2.25rem;
+            width: 131px;
+            height: 44px;
             border: 0;
             border-radius: 0px 0px 70px 70px;
         }
