--- a/sass/style.scss
+++ b/sass/style.scss
@@ -338,9 +338,9 @@ body {
             img {
                 width: 90%;
                 left: auto;
-                right: 0;
+                right: -20px;
                 top: auto;
-                bottom: 7.75rem;
+                bottom: 7.85rem;
 
                 @media screen and (max-width:1400px) {
                     bottom: 3.25rem;
@@ -378,6 +378,7 @@ body {
                 filter: drop-shadow(0px 4px 24px rgba(25, 52, 107, 0.25));
 
                 path {
+                    transition: .3s all ease-in-out;
                     fill: $color-2;
                 }
             }
@@ -599,6 +600,8 @@ body {
 
 
 .card-drop-hover {
+    transition: .3s all ease-in-out;
+
     &:hover {
         filter: drop-shadow($card-shadow);
     }
